@@ -27,7 +27,6 @@
 
 package tools;
 
-import javax.swing.*;
 import java.io.File;
 import java.io.IOException;
 import java.lang.reflect.Constructor;
@@ -37,8 +36,11 @@ import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.Arrays;
 
-public class JPCControl extends EmulatorControl
-{
+import javax.swing.JFrame;
+import javax.swing.JPanel;
+import javax.swing.JScrollPane;
+
+public class JPCControl extends EmulatorControl {
     private final Object pc;
     private final Method execute;
     private final Method setState;
@@ -52,19 +54,16 @@ public class JPCControl extends EmulatorControl
     private final Method destroy;
     private final URLClassLoader cl1;
 
-    public JPCControl(String jar, String pcName, String[] extraArgs) throws IOException
-    {
+    public JPCControl(String jar, String pcName, String[] extraArgs) throws IOException {
         this(jar, concat(CompareToBochs.possibleArgs.get(pcName), extraArgs));
     }
 
-    public JPCControl(String jar, String[] args) throws IOException
-    {
+    public JPCControl(String jar, String[] args) throws IOException {
         this(jar, args, false, false);
     }
 
-    public JPCControl(String jar, String[] args, boolean showScreen, boolean disablePIT) throws IOException
-    {
-        URL[] urls1 = new URL[]{new File(jar).toURL()};
+    public JPCControl(String jar, String[] args, boolean showScreen, boolean disablePIT) throws IOException {
+        URL[] urls1 = { new File(jar).toURL() };
         cl1 = new URLClassLoader(urls1, EmulatorControl.class.getClassLoader());
 
         try {
@@ -72,7 +71,7 @@ public class JPCControl extends EmulatorControl
             Method parse = opts.getMethod("parse", String[].class);
             String[] pcargs = args;
             if (disablePIT)
-                pcargs = concat(new String[]{"-bochs"}, args);
+                pcargs = concat(new String[] { "-bochs" }, args);
             parse.invoke(opts, (Object)pcargs);
 
             Class c1 = cl1.loadClass("org.jpc.emulator.PC");
@@ -92,8 +91,7 @@ public class JPCControl extends EmulatorControl
             Method startClock = c1.getMethod("start");
             startClock.invoke(pc);
 
-            if (showScreen)
-            {
+            if (showScreen) {
                 JPanel screen = (JPanel)c1.getMethod("getNewMonitor").invoke(pc);
                 JFrame frame = new JFrame();
                 frame.getContentPane().add("Center", new JScrollPane(screen));
@@ -101,98 +99,100 @@ public class JPCControl extends EmulatorControl
                 frame.setVisible(true);
                 frame.setBounds(100, 100, 760, 500);
             }
-        } catch (ClassNotFoundException e) {throw new RuntimeException(e.getMessage());}
-        catch (NoSuchMethodException e) {throw new RuntimeException(e.getMessage());}
-        catch (IllegalAccessException e) {throw new RuntimeException(e.getMessage());}
-        catch (InvocationTargetException e) {throw new RuntimeException(e.getMessage());}
-        catch (InstantiationException e) {throw new RuntimeException(e.getMessage());}
+        } catch (ClassNotFoundException e) {
+            throw new RuntimeException(e.getMessage());
+        } catch (NoSuchMethodException e) {
+            throw new RuntimeException(e.getMessage());
+        } catch (IllegalAccessException e) {
+            throw new RuntimeException(e.getMessage());
+        } catch (InvocationTargetException e) {
+            throw new RuntimeException(e.getMessage());
+        } catch (InstantiationException e) {
+            throw new RuntimeException(e.getMessage());
+        }
     }
 
-    public String disam(byte[] code, Integer ops, Boolean is32Bit)
-    {
+    @Override
+    public String disam(byte[] code, Integer ops, Boolean is32Bit) {
         try {
-            return (String) disam.invoke(pc, code, ops, is32Bit);
-        } catch (InvocationTargetException e)
-        {
+            return (String)disam.invoke(pc, code, ops, is32Bit);
+        } catch (InvocationTargetException e) {
             if (e.getCause().getMessage().contains("Invalid"))
                 return "invalid";
             return "Error during disam: " + e.getMessage();
+        } catch (IllegalAccessException e) {
+            throw new RuntimeException(e.getMessage());
         }
-        catch (IllegalAccessException e) {throw new RuntimeException(e.getMessage());}
     }
 
-    public int x86Length(byte[] code, Boolean is32Bit)
-    {
+    @Override
+    public int x86Length(byte[] code, Boolean is32Bit) {
         try {
-            return (Integer) x86Length.invoke(pc, code, is32Bit);
-        } catch (InvocationTargetException e)
-        {
+            return (Integer)x86Length.invoke(pc, code, is32Bit);
+        } catch (InvocationTargetException e) {
             return 0;
+        } catch (IllegalAccessException e) {
+            throw new RuntimeException(e.getMessage());
         }
-        catch (IllegalAccessException e) {throw new RuntimeException(e.getMessage());}
     }
 
-    public String executeInstruction() throws IOException
-    {
+    @Override
+    public String executeInstruction() throws IOException {
         try {
-            ints.invoke(pc, new Integer(1), new Boolean(false));
+            ints.invoke(pc, Integer.valueOf(1), Boolean.valueOf(false));
             int blockLength = (Integer)execute.invoke(pc);
             if (blockLength > 1)
-                ints.invoke(pc, new Integer(blockLength - 1), new Boolean(false));
-            return (String) instructionInfo.invoke(pc, new Integer(blockLength));
-        } catch (InvocationTargetException e)
-        {
+                ints.invoke(pc, Integer.valueOf(blockLength - 1), Boolean.valueOf(false));
+            return (String)instructionInfo.invoke(pc, Integer.valueOf(blockLength));
+        } catch (InvocationTargetException e) {
             Throwable c = e.getCause();
             if (c instanceof IllegalStateException)
                 return c.getMessage();
-            if ((c != null) && c.toString().contains("PAGE_FAULT"))
+            if (c != null && c.toString().contains("PAGE_FAULT"))
                 return c.toString();
             throw new RuntimeException(e.getMessage());
-        }
-        catch (IllegalAccessException e) {
+        } catch (IllegalAccessException e) {
             throw new RuntimeException(e.getMessage());
         }
     }
 
-    public int[] getState() throws IOException
-    {
+    @Override
+    public int[] getState() throws IOException {
         try {
             return (int[])state.invoke(pc);
-        } catch (InvocationTargetException e) {throw new RuntimeException(e.getMessage());}
-        catch (IllegalAccessException e) {throw new RuntimeException(e.getMessage());}
-    }
-
-    public void setPhysicalMemory(int addr, byte[] data) throws IOException
-    {
-        try {
-            setPhysicalMemory.invoke(pc, new Integer(addr), data);
-        } catch (InvocationTargetException e) {throw new RuntimeException(e.getMessage());}
-        catch (IllegalAccessException e) {throw new RuntimeException(e.getMessage());}
-    }
-
-    //public void setState(int[] state, int currentCSEIP) throws IOException
-    //{
-    //    try {
-    //    setState.invoke(pc, (int[])state);
-    //    } catch (InvocationTargetException e) {throw new RuntimeException(e.getMessage());}
-    //    catch (IllegalAccessException e) {throw new RuntimeException(e.getMessage());}
-    //}
-
-    public void destroy()
-    {
-        try {
-            destroy.invoke(pc);
-        } catch (InvocationTargetException e)
-        {
+        } catch (InvocationTargetException e) {
+            throw new RuntimeException(e.getMessage());
+        } catch (IllegalAccessException e) {
             throw new RuntimeException(e.getMessage());
         }
-        catch (IllegalAccessException e) {throw new RuntimeException(e.getMessage());}
     }
 
-    public Integer getPhysicalPage(Integer page, byte[] data) throws IOException
-    {
+    @Override
+    public void setPhysicalMemory(int addr, byte[] data) throws IOException {
         try {
-            return (Integer) getPage.invoke(pc, page, data, new Boolean(false));
+            setPhysicalMemory.invoke(pc, Integer.valueOf(addr), data);
+        } catch (InvocationTargetException e) {
+            throw new RuntimeException(e.getMessage());
+        } catch (IllegalAccessException e) {
+            throw new RuntimeException(e.getMessage());
+        }
+    }
+
+    @Override
+    public void destroy() {
+        try {
+            destroy.invoke(pc);
+        } catch (InvocationTargetException e) {
+            throw new RuntimeException(e.getMessage());
+        } catch (IllegalAccessException e) {
+            throw new RuntimeException(e.getMessage());
+        }
+    }
+
+    @Override
+    public Integer getPhysicalPage(Integer page, byte[] data) throws IOException {
+        try {
+            return (Integer)getPage.invoke(pc, page, data, Boolean.valueOf(false));
         } catch (IllegalAccessException e) {
             e.printStackTrace();
         } catch (InvocationTargetException e) {
@@ -201,10 +201,10 @@ public class JPCControl extends EmulatorControl
         return 0;
     }
 
-    public Integer getLinearPage(Integer page, byte[] data) throws IOException
-    {
+    @Override
+    public Integer getLinearPage(Integer page, byte[] data) throws IOException {
         try {
-            return (Integer) getPage.invoke(pc, page, data, new Boolean(true));
+            return (Integer)getPage.invoke(pc, page, data, Boolean.valueOf(true));
         } catch (IllegalAccessException e) {
             e.printStackTrace();
         } catch (InvocationTargetException e) {
@@ -213,28 +213,33 @@ public class JPCControl extends EmulatorControl
         return 0;
     }
 
-    public byte[] getCMOS() throws IOException
-    {
+    @Override
+    public byte[] getCMOS() throws IOException {
         throw new IllegalStateException("Unimplemented!");
     }
-    public int[] getPit() throws IOException
-    {
+
+    @Override
+    public int[] getPit() throws IOException {
         throw new IllegalStateException("Unimplemented!");
     }
-    public int getPITIntTargetEIP() throws IOException
-    {
+
+    @Override
+    public int getPITIntTargetEIP() throws IOException {
         throw new IllegalStateException("Unimplemented!");
     }
-    public void keysDown(String keys)
-    {
+
+    @Override
+    public void keysDown(String keys) {
         throw new IllegalStateException("Unimplemented!");
     }
-    public void keysUp(String keys)
-    {
+
+    @Override
+    public void keysUp(String keys) {
         throw new IllegalStateException("Unimplemented!");
     }
-    public void sendMouse(Integer dx, Integer dy, Integer dz, Integer buttons)
-    {
+
+    @Override
+    public void sendMouse(Integer dx, Integer dy, Integer dz, Integer buttons) {
         throw new IllegalStateException("Unimplemented!");
     }
 
@@ -242,5 +247,5 @@ public class JPCControl extends EmulatorControl
         T[] result = Arrays.copyOf(first, first.length + second.length);
         System.arraycopy(second, 0, result, first.length, second.length);
         return result;
-}
+    }
 }
